[workspace]
members = ["examples/installer", "examples/rss_reader"]

[package]
name = "kwui"
version = "0.1.1"
edition = "2021"
description = "A GUI library with JSX/CSS support"
# publish = ["crates-io"]
license = "LGPL-3.0-or-later"
keywords = ["graphics", "gui", "widgets", "jsx", "quickjs"]
categories = ["gui", "api-bindings"]
repository = "https://gitee.com/wanghoi/kwui-rs"
readme = "README.md"
links = "kwui"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
name = "kwui"
path = "src/lib.rs"

[dependencies]
log = "0.4.20"
kwui-sys = { version = "0.1.0", path = "kwui-sys" }

[dev-dependencies]
anyhow = "1.0.80"
rss = "2.0.7"
tokio = { version = "1.36.0", features = ["full"] }

[target.'cfg(target_os = "android")'.dev-dependencies]
reqwest = { version = "0.11.24", default-features = false }

[target.'cfg(not(target_os = "android"))'.dev-dependencies]
reqwest = { version = "0.11.24" }
windows_dpi = "0.3.0"

[build-dependencies]
build-target = "0.4.0"
embed-resource = "2.4.1"
kwui-cli = { path = "../kwui-cli" }
walkdir = "2.5.0"
