[workspace]
members = ["examples/installer", "examples/rss_reader", "kwui-sys", "kwui-cli"]

[workspace.package]
version = "0.2.0-beta.3"
license = "LGPL-3.0-or-later"
edition = "2021"

[package]
name = "kwui"
version = { workspace = true }
edition = { workspace = true }
description = "A GUI library with JSX/CSS support"
# publish = ["crates-io"]
license = { workspace = true }
keywords = ["graphics", "gui", "widgets", "jsx", "quickjs"]
categories = ["gui", "api-bindings"]
repository = "https://github.com/wanghoi/kwui-rs"
readme = "README.md"
links = "kwui"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
name = "kwui"
path = "src/lib.rs"

[dependencies]
log = "0.4.20"
kwui-sys = { version = "0.2.0-beta.3", path = "kwui-sys" }

[build-dependencies]
build-target = "0.4.0"
embed-resource = "2.4.1"
kwui-cli = { version = "0.2.0-beta.3", path = "kwui-cli" }
walkdir = "2.5.0"

[patch.crates-io]
cmake = { git = "https://gitee.com/wanghoi/cmake-rs.git" }
