[package]
name = "kwui-cli"
version = {workspace = true}
edition = {workspace = true}
description = "Command line tool for kwui - A GUI library with JSX/CSS support"
# publish = ["crates-io"]
license = {workspace = true}
keywords = ["graphics", "gui", "widgets", "jsx", "quickjs"]
categories = ["gui", "api-bindings"]
repository = "https://github.com/wanghoi/kwui-rs"
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "kwui"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
byteorder = "1.5.0"
cargo_toml = "0.20.2"
clap = { version = "4.4.11", features = ["derive"] }
flate2 = "1.0.30"
itertools = "0.12.0"
lzf = "1.0.0"
num_enum = "0.7.1"
path-clean = "1.0.1"
regex = "1.10.5"
sha1 = "0.10.6"
size = "0.4.1"
tar = "0.4.41"
toml = "0.8.14"
walkdir = "2.4.0"
zip = "2.1.3"

[build-dependencies]
bindgen = "0.69.1"
cmake = "0.1.50"
