[package]
name = "kwui-sys"
version = "0.1.1"
edition = "2021"
links = "kwui_static"
#publish = ["crates-io"]
description = "sys-crate for kwui - A GUI library with JSX/CSS support"
license = "LGPL-3.0-or-later"
keywords = ["graphics", "gui", "widgets", "jsx", "quickjs"]
categories = ["gui", "api-bindings"]
repository = "https://gitee.com/wanghoi/kwui-rs/"
readme = "../README.md"

[lib]
name = "kwui_sys"
path = "src/lib.rs"

[dependencies]

[build-dependencies]
bindgen = "0.69.4"
cmake = "0.1.50"
