[package]
name = "kwui-sys"
version = "0.1.1"
edition = "2021"
links = "kwui-sys"
#publish = ["crates-io"]
description = "sys-crate for kwui - A GUI library with JSX/CSS support"
license = "LGPL-3.0-or-later"
keywords = ["graphics", "gui", "widgets", "jsx", "quickjs"]
categories = ["gui", "api-bindings"]
repository = "https://gitee.com/wanghoi/kwui-rs/"
readme = "../README.md"

[lib]
name = "kwui_sys"
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.69.4"
build-target = "0.4.0"
cmake = { git = "https://gitee.com/wanghoi/cmake-rs.git" }
