[package]
name = "kwui-sys"
version = {workspace = true}
edition = {workspace = true}
links = "kwui-sys"
#publish = ["crates-io"]
description = "sys-crate for kwui - A GUI library with JSX/CSS support"
license = {workspace = true}
keywords = ["graphics", "gui", "widgets", "jsx", "quickjs"]
categories = ["gui", "api-bindings"]
repository = "https://github.com/wanghoi/kwui-rs/"
readme = "../README.md"

[lib]
name = "kwui_sys"
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.69.4"
build-target = "0.4.0"
cmake = { git = "https://gitee.com/wanghoi/cmake-rs.git" }
flate2 = "1.0.30"
heck = "0.5.0"
regex = "1.10.4"
serde_json = "1.0.117"
tar = "0.4.41"
toml = "0.8.14"
