[package]
version = "0.1.0"
edition = "2021"
resolver = "2"
name = "rss_reader"
autobins = false

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "rss_reader_runner"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.80"
rss = "2.0.7"
tokio = { version = "1.36.0", features = ["full"] }
kwui = { path = "../../" }
hyper = { version = "0.14", default-features = false, features = ["http1", "client"] }
hyper-boring = "4.6.0"
boring = "4.6.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
windows_dpi = "0.3.0"

[build-dependencies]
build-target = "0.4.0"
embed-resource = "2.4.1"
kwui-cli = { workspace = true }
walkdir = "2.5.0"
